<resources>
    <string name="action_settings">Settings</string>
    <string name="res_copy">资源拷贝中</string>
    <string name="network_not_connect">网络没有连接，请检查网络</string>
    <string name="download_failed">下载失败</string>
    <string name="permission_camera_mic">请求相机和麦克风权限</string>
    <string name="filter_null">原片</string>
    <string name="video_save_tip">当前拍摄的视频已保存相册</string>
    <string name="min_record_duration">最小时长</string>
    <string name="max_record_duration">最大时长</string>
    <string name="bit_rate">码率(kbps)</string>
    <string name="frame_rate">帧率</string>
    <string name="video_quality">视频质量</string>
    <string name="gop">关键帧间隔</string>
    <string name="resolution">分辨率</string>
    <string name="min_record_duration_hint">最小时长大于0，默认值2S</string>
    <string name="max_record_duration_hint">建议不超过300S，默认值30S</string>
    <string name="bit_rate_hint">建议600-2000，默认1000</string>
    <string name="frame_rate_hint">建议20-30，默认25</string>
    <string name="gop_hint">建议1-300，默认125 </string>
    <string name="start_record">启动录制</string>
    <string name="record_resolution_360p">360p</string>
    <string name="record_resolution_480p">480p</string>
    <string name="record_resolution_540p">540p</string>
    <string name="record_resolution_720p">720p</string>
    <string name="video_quality_low">低</string>
    <string name="video_quality_meidan">中</string>
    <string name="video_quality_high">高</string>
    <string name="video_quality_super">极高</string>
    <string name="camera_permission_tip">请开启摄像头权限</string>
    <string name="no_free_memory">剩余磁盘空间不足</string>
    <string name="no_import_moudle">当前不包含导入模块</string>
</resources>
