<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right|center"
            android:text="@string/min_record_duration"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/min_duration_edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rect_gray"
            android:hint="@string/min_record_duration_hint"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right|center"
            android:text="@string/max_record_duration"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/max_duration_edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rect_gray"
            android:hint="@string/max_record_duration_hint"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right|center"
            android:text="@string/gop"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/gop_edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rect_gray"
            android:hint="@string/gop_hint"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right|center"
            android:text="@string/video_quality"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/quality_seekbar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxHeight="5dp"
            android:minHeight="5dp"
            android:progressDrawable="@drawable/seekbar_drawable"
            android:thumb="@drawable/seekbar_thum" />

        <TextView
            android:id="@+id/quality_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="222*2222"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right|center"
            android:text="@string/resolution"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/resolution_seekbar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxHeight="5dp"
            android:minHeight="5dp"
            android:progress="50"
            android:progressDrawable="@drawable/seekbar_drawable"
            android:thumb="@drawable/seekbar_thum" />

        <TextView
            android:id="@+id/resolution_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="222*2222"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/start_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/seek_bar_theme"
        android:padding="10dp"
        android:text="@string/start_record"
        android:textColor="@android:color/white" />
</LinearLayout>
